# dev-kit

./: PORTFOLIO_AUDIT.md  README.md  pyproject.toml
docs/: SAMPLE_REPORT.md  portfolio-audit.md
src/dev_kit/: __init__.py  __main__.py  auditors.py  cli.py  portfolio.py  portfolio_cli.py
tests/: test_auditors.py  test_portfolio.py
tests/fixtures/browser_game_static_project/: CHANGELOG.md  README.md  app.js  index.html  smoke_fixture.mjs
tests/fixtures/clean_project/: index.html
tests/fixtures/mismatched_version_project/: app.js  sw.js
